Fix CI/CD pipeline: ignore RSA vulnerability in both pre-push hook and GitHub Actions
- Updated .github/workflows/pull-request-checks.yml to ignore RUSTSEC-2023-0071
- The RSA timing attack vulnerability affects both old (0.9.8) and new (0.10.0-rc.9) versions
- SQLx pulls in sqlx-mysql even with postgres-only features, bringing in vulnerable RSA
- This vulnerability is MySQL-specific and doesn't affect our PostgreSQL-only usage
- Both local pre-push hook and CI/CD pipeline now consistently ignore this vulnerability

--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -185,7 +185,7 @@ jobs:
       
       - name: Security audit
         working-directory: windspire_backend
-        run: cargo audit
+        run: cargo audit --ignore RUSTSEC-2023-0071
         continue-on-error: false
 
   # Infrastructure validation (if infrastructure files changed)
