--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -16,9 +16,10 @@ sqlx = { version = "0.8.6", features = [
     "runtime-tokio",
     "tls-rustls",    # Changed from tls-native-tls to avoid OpenSSL vulnerabilities
     "macros",
+    "migrate",       # Required for sqlx::migrate! macro
     "uuid",
     "chrono",
-], default-features = false } # Exclude MySQL and other unused features
+] }
 tokio = { version = "1.46.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20" # Updated from 0.3.19 to fix RUSTSEC-2025-0055
